# pdftts

./: .gitignore  README.md  pdf-margin-test.py  pyproject.toml
pdftts/: __init__.py  pdftts.desktop  pdftts.py  qt.py
