[tool.poetry]
name = "pdftts"
version = "0.0.1"
description = "Read PDF files using the edge TTS AI engine."
authors = ["Charles K. Neimog <charlesneimog@outlook.com>"]
readme = "README.md"
license = "GPL-3.0-only"
homepage = "https://github.com/charlesneimog/pdftts"
repository = "https://github.com/charlesneimog/pdftts"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.0"
requests = "^2.31.0"
cmake = "^3.21.4"
ninja = "^1.10.2"
pygit2 = "^1.15.1"
pygame = "^2.5.2"
pdfplumber = "^0.10.3"
edge-tts = "^6.1.10"
langdetect = "^1.0.9"
spacy = "^3.7.2"

[tool.poetry.scripts]
pdftts = "pdftts.pdftts:main"

[tool.black]
line-length = 120


