[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdftts"
version = "0.0.1"
description = "Read PDF files using the edge TTS AI engine."
authors = [
    {name = "Charles K. Neimog", email = "charlesneimog@outlook.com"}
]
readme = "README.md"
license = {text = "GPL-3.0-only"}
keywords = ["pdf", "tts", "edge-tts", "audiobook", "text-to-speech"]
dependencies = [
    "pyyaml >=6.0.0",
    "requests >=2.31.0",
    "cmake >=3.21.4",
    "ninja >=1.10.2",
    "pygit2 >=1.15.1",
    "pygame >=2.5.2",
    "pdfplumber >=0.10.3",
    "edge-tts >=6.1.10",
    "langdetect >=1.0.9",
    "spacy >=3.7.2",
]

[project.scripts]
pdftts = "pdftts.pdftts:main"

