[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdftts"
version = "0.0.1"
description = "Read PDF files using the edge TTS AI engine."
authors = [
    {name = "Charles K. Neimog", email = "charlesneimog@outlook.com"}
]
readme = "README.md"
license = {text = "GPL-3.0-only"}
keywords = ["pdf", "tts", "edge-tts", "audiobook", "text-to-speech"]
dependencies = [
    "pygame",
    "pdfplumber",
    "edge-tts",
    "langdetect",
    "spacy",
]

[project.scripts]
pdftts = "pdftts.pdftts:main"

